[package]
name = "cooperative-pathfinding"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.7"
bracket-terminal = "0.7"
termion = "1.5"
rand = "0.8"
cooperative_pathfinding = { path = "lib/cooperative_pathfinding" }
